possible na nkabutang sa akong profile

--- a/profile.html
+++ b/profile.html
@@ -15,11 +15,19 @@
 				<h3>#Introvert#N.G.F.S.B#SimpleGuy#TaongBahay</h3>
 			</div>
 
-// something here**
 
-<div>
-	Personal Profile
-	Hi Im Jayson Pegte-Jarquio. 
+
+<div class="content" id="body">
+	
+		<H1>Personal Profile</H1>
+		<pre>
+			<h2>Name:</h2><span class="nowrap"><h3>Jayson Pegte-Jarquio</h3></span>
+			<h2>Age:</h2><span class="nowrap"><h3>23</h3></span>
+			<h2>Gender:</h2><span class="nowrap"><h3>Male</h3></span>
+			<h2>Date of Birth:</h2><span class="nowrap"><h3>November 17,1994</h3></span>
+			<h2>Civil Status:</h2><span class="nowrap"><h3>Single</h3></span>
+			<h2>Permanent Living Address:</h2><span class="nowrap"><h3>Km. 22 Bud-bud Bunawan Davao City</h3></span>
+		</pre>
 </div>
 
 </body>
