nag buhat nkog header sir

--- a/index.html
+++ b/index.html
@@ -6,17 +6,28 @@
 	
 </head>
 <body>
-
-			<div class="header" id="head">
-			
-					<div class="name">
+		<header class="header_fixed">
+					<div class="wrapper clearfix" id="head">
+					<a href="#"><img src="assets/images/name.png" alt="" title="" class="header_logo"/></a>
 					
+							<nav class="clearfix">
+								<ul>
+									<li><a href="#Introduction">Introduction</a></li>
+									<li><a href="#Profile">Profile</a></li>
+									<li><a href="#Gallery">Gallery</a></li>
+									<li><a href="#Asspirations">Asspirations</a></li>
+									<li><a href="#contact">Contact</a></li>
+								</ul>
+								<a href="#" class="hamburger fixed_nav" id="sitcky_menu">
+									<span class="top"></span>
+									<span class="middle left"></span>
+									<span class="middle right"></span>
+									<span class="bottom"></span>
+								</a>
+							</nav>
+						
 					</div>
-				<H1>Jayson Jarquio</H1>
-				<h3>#Introvert#N.G.F.S.B#SimpleGuy#TaongBahay</h3>
-			</div>
-
-// something here**
+		</header>
 
 <div>
 	Personal Profile
