nag add kog Introduction sir

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
 	<title>Jayson</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
-	<script type="text/javascript" src="./js/main.js"></script>
-	<script type="text/javascript" src="./js/jquery.js"></script>
+	<script type="text/javascript" src="assets/js/main.js"></script>
+	<script type="text/javascript" src="assets/js/jquery.js"></script>
+	<script type="text/javascript" src="assets/js/easing.js"></script>
+    <script type="text/javascript" src="assets/js/flexslider.js"></script>
+    <script type="text/javascript" src="assets/js/scrollTo.js"></script>
 </head>
 <body>
 		<header class="header_fixed">
@@ -63,12 +67,18 @@
 
 	</section><!--  end billboard  -->
 
+	<!--  start Introduction  -->
+	<section class="Introduction" id="Introduction">
+		<div class="wrapper clearfix">
+			<article>
+				<div class="Introduction_info">
+					<h3 class="Introduction_title">Some thing here</h3>
+					<p class="Introduction_desc">bla bla bla</p>
+				</div>
+			</article>
+		</div>
+	</section><!--  end Introduction  -->
 
-
-<div>
-	Personal Profile
-	Hi Im Jayson Pegte-Jarquio. 
-</div>
 
 </body>
 </html>
