nag add kog profile sir.

--- a/index.html
+++ b/index.html
@@ -80,5 +80,70 @@
 	</section><!--  end Introduction  -->
 
 
+
+<!--  start Profile  -->
+	<section class="Profile" id="Profile">
+		<div class="wrapper clearfix">
+			<img src="img/logo_about.png">
+			<p class="Profile_txt">Blah2</p>
+
+			<div class="timeline">
+				<hr class="hseparator"/>	
+				<div class="column">
+					<div class="right_row first">
+						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<h2>Name:</h2>
+						<p>Jayson Pegte-Jarquio</p>
+					</div>	
+				</div>
+
+				<div class="column">
+					<div class="left_row">
+						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<h2>Age:</h2>
+						<p>23</p>
+					</div>	
+				</div>
+				
+				<div class="column">
+					<div class="right_row">
+						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<h2>Date of Birth:</h2>
+						<p>November 17,1994</p>
+					</div>	
+				</div>
+
+				<div class="column">
+					<div class="left_row">
+						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<h2>Permanent Living Address:</h2>
+						<p>Km. 22 Bud-bud Bunawan Davao City</p>
+					</div>	
+				</div>
+
+				<div class="column">
+					<div class="right_row">
+						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<h2>Elementary Education</h2>
+						<p>Daniel M. Perez Central Elementary School</p>
+					</div>	
+				</div>
+
+				<div class="column">
+					<div class="left_row last">
+						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<h2>Secondary Education</h2>
+						<p>Holy Cross Of Bunawan Davao Inc.</p>
+					</div>	
+				</div>
+
+			</div><!--  end timeline  -->
+
+		</div><!--  end wrapper  -->
+	</section><!--  end Profile  -->
+
+		</div><!--  end wrapper  -->
+	</section><!--  end about  -->
+
 </body>
 </html>
