--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
 <!--  start Profile  -->
 	<section class="Profile" id="Profile">
 		<div class="wrapper clearfix">
-			<img src="img/logo_about.png">
+			<img src="assets/images/name1.jpg">
 			<p class="Profile_txt">Blah2</p>
 
 			<div class="timeline">
 				<hr class="hseparator"/>	
 				<div class="column">
 					<div class="right_row first">
-						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<img src="assets/images/timeline_cercle.png" alt="" title="" class="bullet_point"/>
 						<h2>Name:</h2>
 						<p>Jayson Pegte-Jarquio</p>
 					</div>	
@@ -99,7 +99,7 @@
 
 				<div class="column">
 					<div class="left_row">
-						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<img src="assets/images/timeline_cercle.png" alt="" title="" class="bullet_point"/>
 						<h2>Age:</h2>
 						<p>23</p>
 					</div>	
@@ -107,7 +107,7 @@
 				
 				<div class="column">
 					<div class="right_row">
-						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<img src="assets/images/timeline_cercle.png" alt="" title="" class="bullet_point"/>
 						<h2>Date of Birth:</h2>
 						<p>November 17,1994</p>
 					</div>	
@@ -115,7 +115,7 @@
 
 				<div class="column">
 					<div class="left_row">
-						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<img src="assets/images/timeline_cercle.png" alt="" title="" class="bullet_point"/>
 						<h2>Permanent Living Address:</h2>
 						<p>Km. 22 Bud-bud Bunawan Davao City</p>
 					</div>	
@@ -123,7 +123,7 @@
 
 				<div class="column">
 					<div class="right_row">
-						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<img src="assets/images/timeline_cercle.png" alt="" title="" class="bullet_point"/>
 						<h2>Elementary Education</h2>
 						<p>Daniel M. Perez Central Elementary School</p>
 					</div>	
@@ -131,7 +131,7 @@
 
 				<div class="column">
 					<div class="left_row last">
-						<img src="img/timeline_cercle.png" alt="" title="" class="bullet_point"/>
+						<img src="assets/images/timeline_cercle.png" alt="" title="" class="bullet_point"/>
 						<h2>Secondary Education</h2>
 						<p>Holy Cross Of Bunawan Davao Inc.</p>
 					</div>	
