--- a/index.html
+++ b/index.html
@@ -142,6 +142,34 @@
 		</div><!--  end wrapper  -->
 	</section><!--  end Profile  -->
 
+
+
+	<!--  start Gallery  -->
+	<section class="Gallery clearfix" id="Gallery">
+		<div class="wrapper clearfix">
+			<h2 class="title">Gallery<span>/  some project that we love</span></h2>
+			<div class="folio_wrapper">
+				<ul class='slides clearfix'>
+					<li>
+						<article>
+							<div class="shadow">
+								<div class="folio_info">
+									<a href="#">
+										<h2>title of image</h2>
+									</a>
+									<a href="#">
+										<h3>description</h3>
+									</a>
+								</div>						
+							</div>
+							<a href="#">
+								<div class="folio_img">
+									<img src="assets/images/1.jpg" alt="" title="">
+								</div>
+							</a>
+						</article>
+					</li>
+
 		</div><!--  end wrapper  -->
 	</section><!--  end about  -->
 
