nakalimtan nko ang closing tags sir.

--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
 							</a>
 						</article>
 					</li>
+				</ul>
+			</div>
+		</div>
+	</section><!--  end Gallery  -->
+
 
 		</div><!--  end wrapper  -->
 	</section><!--  end about  -->
