--- a/index.html
+++ b/index.html
@@ -174,6 +174,42 @@
 		</div>
 	</section><!--  end Gallery  -->
 
+	<!--  start testimonials  -->
+	<section class="testimonials" id="testimonials">
+		<div class="wrapper clearfix">
+			<h2 class="title">Asspirations<span>/  something to do here</span></h2>
+			<div class="testimonials_wrapper">
+				<article>
+					<img src="img/quote.png" alt="" title="" class="quote">
+					<h4 class="author">lol</h4>
+					<div class="testimonial">
+						<span class="arrow"></span>
+						<p>
+						</p>
+					</div>
+				</article>
+
+				<article>
+					<img src="iassets/images/quote.png" alt="" title="" class="quote">
+					<h4 class="author">i Dont Know</h4>
+					<div class="testimonial">
+						<span class="arrow"></span>
+						<p></p>
+					</div>
+				</article>
+
+				<article>
+					<img src="img/quote.png" alt="" title="" class="quote">
+					<h4 class="author">What im doin</h4>
+					<div class="testimonial">
+						<span class="arrow"></span>
+						<p></p>
+					</div>
+				</article>
+			</div>	
+		</div>
+	</section><!--  ennd testimonials  -->
+
 
 		</div><!--  end wrapper  -->
 	</section><!--  end about  -->
