css sa Asspirations

--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
 	</section><!--  end Gallery  -->
 
 	<!--  start testimonials  -->
-	<section class="testimonials" id="testimonials">
+	<section class="Asspirations" id="Asspirations">
 		<div class="wrapper clearfix">
 			<h2 class="title">Asspirations<span>/  something to do here</span></h2>
-			<div class="testimonials_wrapper">
+			<div class="Asspirations_wrapper">
 				<article>
 					<img src="img/quote.png" alt="" title="" class="quote">
 					<h4 class="author">lol</h4>
-					<div class="testimonial">
+					<div class="Asspirations">
 						<span class="arrow"></span>
 						<p>
 						</p>
@@ -192,7 +192,7 @@
 				<article>
 					<img src="iassets/images/quote.png" alt="" title="" class="quote">
 					<h4 class="author">i Dont Know</h4>
-					<div class="testimonial">
+					<div class="Asspirations">
 						<span class="arrow"></span>
 						<p></p>
 					</div>
@@ -201,14 +201,14 @@
 				<article>
 					<img src="img/quote.png" alt="" title="" class="quote">
 					<h4 class="author">What im doin</h4>
-					<div class="testimonial">
+					<div class="Asspirations">
 						<span class="arrow"></span>
 						<p></p>
 					</div>
 				</article>
 			</div>	
 		</div>
-	</section><!--  ennd testimonials  -->
+	</section><!--  ennd Asspirations  -->
 
 
 		</div><!--  end wrapper  -->
