--- a/index.html
+++ b/index.html
@@ -210,6 +210,16 @@
 		</div>
 	</section><!--  ennd Asspirations  -->
 
+	<!--  start contact  -->
+	<section class="contact" id="contact">
+		<img src="img/contact_icon.png" alt="" title=""/>
+		<h2 class="title">something</h2>
+		<hr/>
+		<p class="email">to do here</p>
+		<p class="phone">312312312312312312</p>
+	</section><!--  end contact  -->
+
+
 
 		</div><!--  end wrapper  -->
 	</section><!--  end about  -->
