--- a/index.html
+++ b/index.html
@@ -177,7 +177,106 @@
 						</article>
 					</li>
 
-					
+					<li>
+						<article>
+							<div class="shadow">
+								<div class="folio_info">
+									<a href="#">
+										<h2>title of image</h2>
+									</a>
+									<a href="#">
+										<h3>description</h3>
+									</a>
+								</div>						
+							</div>
+							<a href="#">
+								<div class="folio_img">
+									<img src="assets/images/2.jpg" alt="" title="">
+								</div>
+							</a>
+						</article>
+					</li>
+
+					<li>
+						<article>
+							<div class="shadow">
+								<div class="folio_info">
+									<a href="#">
+										<h2>title of image</h2>
+									</a>
+									<a href="#">
+										<h3>description</h3>
+									</a>
+								</div>						
+							</div>
+							<a href="#">
+								<div class="folio_img">
+									<img src="assets/images/3.jpg" alt="" title="">
+								</div>
+							</a>
+						</article>
+					</li>
+
+					<li>
+						<article>
+							<div class="shadow">
+								<div class="folio_info">
+									<a href="#">
+										<h2>title of image</h2>
+									</a>
+									<a href="#">
+										<h3>description</h3>
+									</a>
+								</div>						
+							</div>
+							<a href="#">
+								<div class="folio_img">
+									<img src="assets/images/4.jpg" alt="" title="">
+								</div>
+							</a>
+						</article>
+					</li>
+
+					<li>
+						<article>
+							<div class="shadow">
+								<div class="folio_info">
+									<a href="#">
+										<h2>title of image</h2>
+									</a>
+									<a href="#">
+										<h3>description</h3>
+									</a>
+								</div>						
+							</div>
+							<a href="#">
+								<div class="folio_img">
+									<img src="assets/images/5.jpg" alt="" title="">
+								</div>
+							</a>
+						</article>
+					</li>
+
+					<li>
+						<article>
+							<div class="shadow">
+								<div class="folio_info">
+									<a href="#">
+										<h2>title of image</h2>
+									</a>
+									<a href="#">
+										<h3>description</h3>
+									</a>
+								</div>						
+							</div>
+							<a href="#">
+								<div class="folio_img">
+									<img src="assets/images/6.jpg" alt="" title="">
+								</div>
+							</a>
+						</article>
+					</li>
+
 
 				</ul>
 			</div>
