nag delete kog uban na dli kailangan sir

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 	<!--  start billboard  -->
-	<section class="billboard">
+	<section class="billboard" id="section0">
 		
 
 		<div class="caption">
