--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/jquery.fullPage.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
 	<script type="text/javascript" src="assets/js/main.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.js"></script>
@@ -19,7 +20,7 @@
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
 				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
-				anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', 'lastPage'],
+				anchors: ['Introduction', 'Profile', 'portfolio', 'Asspirations', 'Contact'],
 				menu: '#menu',
 				scrollingSpeed: 1000
 			});
@@ -34,7 +35,7 @@
 									<ul id="menu">
 										<li data-menuanchor="Introduction"><a href="#Introduction">Introduction</a></li>
 										<li data-menuanchor="Profile"><a href="#Profile">Profile</a></li>
-										<li data-menuanchor="Gallery"><a href="#Gallery">Gallery</a></li>
+										<li data-menuanchor="portfolio"><a href="#portfolio">Portfolio</a></li>
 										<li data-menuanchor="Asspirations"><a href="#Asspirations">Asspirations</a></li>
 										<li data-menuanchor="Contact"><a href="#Contact">Contact</a></li>
 
@@ -46,7 +47,7 @@
 
 
 	<!--  start billboard  -->
-	<section class="billboard" id="section0">
+	<section class="billboard" id="">
 		
 
 		<div class="caption">
@@ -133,9 +134,9 @@
 
 
 	<!--  start Gallery  -->
-	<section class="Gallery clearfix" id="Gallery">
+	<section class="portfolio clearfix" id="portfolio">
 		<div class="wrapper clearfix">
-			<h2 class="title">Gallery<span>/  some project that we love</span></h2>
+			<h2 class="title">Portfolio<span>/  some project that we love</span></h2>
 			<div class="folio_wrapper">
 				<ul class='slides clearfix'>
 					<li>
@@ -143,10 +144,10 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>title of image</h2>
+										<h2>Senenatis Vitae Justoctu Felis</h2>
 									</a>
 									<a href="#">
-										<h3>description</h3>
+										<h3>branding</h3>
 									</a>
 								</div>						
 							</div>
@@ -163,10 +164,30 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>title of image</h2>
+										<h2>Senenatis Vitae Justoctu Felis</h2>
 									</a>
 									<a href="#">
-										<h3>description</h3>
+										<h3>branding</h3>
+									</a>
+								</div>						
+							</div>
+							<a href="#">
+								<div class="folio_img">
+									<img src="assets/images/1.jpg" alt="" title="">
+								</div>
+							</a>
+						</article>
+					</li>
+
+					<li>
+						<article>
+							<div class="shadow">
+								<div class="folio_info">
+									<a href="#">
+										<h2>Senenatis Vitae Justoctu Felis</h2>
+									</a>
+									<a href="#">
+										<h3>branding</h3>
 									</a>
 								</div>						
 							</div>
@@ -183,10 +204,10 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>title of image</h2>
+										<h2>Senenatis Vitae Justoctu Felis</h2>
 									</a>
 									<a href="#">
-										<h3>description</h3>
+										<h3>branding</h3>
 									</a>
 								</div>						
 							</div>
@@ -203,10 +224,10 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>title of image</h2>
+										<h2>Senenatis Vitae Justoctu Felis</h2>
 									</a>
 									<a href="#">
-										<h3>description</h3>
+										<h3>branding</h3>
 									</a>
 								</div>						
 							</div>
@@ -223,10 +244,10 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>title of image</h2>
+										<h2>Senenatis Vitae Justoctu Felis</h2>
 									</a>
 									<a href="#">
-										<h3>description</h3>
+										<h3>branding</h3>
 									</a>
 								</div>						
 							</div>
@@ -237,32 +258,10 @@
 							</a>
 						</article>
 					</li>
-
-					<li>
-						<article>
-							<div class="shadow">
-								<div class="folio_info">
-									<a href="#">
-										<h2>title of image</h2>
-									</a>
-									<a href="#">
-										<h3>description</h3>
-									</a>
-								</div>						
-							</div>
-							<a href="#">
-								<div class="folio_img">
-									<img src="assets/images/6.jpg" alt="" title="">
-								</div>
-							</a>
-						</article>
-					</li>
-
-
 				</ul>
 			</div>
 		</div>
-	</section><!--  end Gallery  -->
+	</section><!--  end portfolio  -->
 
 	<!--  start testimonials  -->
 	<section class="Asspirations" id="Asspirations">
