added some fonts

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 					<div class="wrapper clearfix">
 							<nav class="clearfix">
 									<ul id="menu">
-										<li data-menuanchor="Introduction"><a href="#Introduction">Introduction</a></li>
-										<li data-menuanchor="Profile"><a href="#Profile">Profile</a></li>
-										<li data-menuanchor="portfolio"><a href="#portfolio">Portfolio</a></li>
-										<li data-menuanchor="Asspirations"><a href="#Asspirations">Asspirations</a></li>
-										<li data-menuanchor="Contact"><a href="#Contact">Contact</a></li>
+										<li data-menuanchor="Introduction"><a href="#section3">Introduction</a></li>
+										<li data-menuanchor="Profile"><a href="#section2">Profile</a></li>
+										<li data-menuanchor="portfolio"><a href="#section1">Portfolio</a></li>
+										<li data-menuanchor="Asspirations"><a href="#section4">Aspirations</a></li>
+										<li data-menuanchor="Contact"><a href="#section5">Contact</a></li>
 
 									</ul>
 							</nav>
@@ -47,7 +47,7 @@
 
 
 	<!--  start billboard  -->
-	<section class="billboard" id="">
+	<section class="billboard" id="section0">
 		
 
 		<div class="caption">
@@ -57,7 +57,7 @@
 	</section><!--  end billboard  -->
 
 	<!--  start Introduction  -->
-	<section class="Introduction" id="Introduction">
+	<section class="Introduction" id="section3">
 		<div class="wrapper clearfix">
 			<article>
 				<div class="Introduction_info">
@@ -71,7 +71,7 @@
 
 
 <!--  start Profile  -->
-	<section class="Profile" id="Profile">
+	<section class="Profile" id="section2">
 		<div class="wrapper clearfix">
 			<img src="assets/images/name1.jpg">
 			<p class="Profile_txt">Blah2</p>
@@ -131,12 +131,48 @@
 		</div><!--  end wrapper  -->
 	</section><!--  end Profile  -->
 
+			<div class="section active" id="section1">
+					<div class="slide">
+						<div class="intro">
+							<h1>Create Sliders</h1>
+							<p>Not only vertical scrolling but also horizontal scrolling. With fullPage.js you will be able to add horizontal sliders in the most simple way ever.</p>
+							<img src="assets/images/1.jpg" alt="slider" />
+						</div>
+
+					</div>
+					<div class="slide">
+						<div class="intro">
+							<img src="assets/images/2.jpg" alt="simple" />
+							<h1>Simple</h1>
+							<p>Easy to use. Configurable and customizable.</p>
+						</div>
+					</div>
+					<div class="slide">
+						<div class="intro">
+							<img src="assets/images/3.jpg" alt="Cool" />
+							<h1>Cool</h1>
+							<p>It just looks cool. Impress everybody with a simple and modern web design!</p>
+						</div>
+					</div>
+					<div class="slide">
+						<div class="intro">
+							<img src="assets/images/4.jpg" alt="Compatible" />
+							<h1>Compatible</h1>
+							<p>Working in modern and old browsers too! IE 8 users don't have the fault of using that horrible browser! Lets give them a chance to see your site in a proper way!</p>
+						</div>
+					</div>
+				</div>
 
 
-	<!--  start Gallery  -->
+
+
+
+
+
+	<!--  start Gallery  --
 	<section class="portfolio clearfix" id="portfolio">
 		<div class="wrapper clearfix">
-			<h2 class="title">Portfolio<span>/  some project that we love</span></h2>
+			<h2 class="title">Portfolio<span>/  some pictures of me</span></h2>
 			<div class="folio_wrapper">
 				<ul class='slides clearfix'>
 					<li>
@@ -144,7 +180,7 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>Senenatis Vitae Justoctu Felis</h2>
+										<h2></h2>
 									</a>
 									<a href="#">
 										<h3>branding</h3>
@@ -164,7 +200,7 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>Senenatis Vitae Justoctu Felis</h2>
+										<h2></h2>
 									</a>
 									<a href="#">
 										<h3>branding</h3>
@@ -184,7 +220,7 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>Senenatis Vitae Justoctu Felis</h2>
+										<h2></h2>
 									</a>
 									<a href="#">
 										<h3>branding</h3>
@@ -204,7 +240,7 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>Senenatis Vitae Justoctu Felis</h2>
+										<h2>/h2>
 									</a>
 									<a href="#">
 										<h3>branding</h3>
@@ -224,7 +260,7 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>Senenatis Vitae Justoctu Felis</h2>
+										<h2></h2>
 									</a>
 									<a href="#">
 										<h3>branding</h3>
@@ -244,7 +280,7 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>Senenatis Vitae Justoctu Felis</h2>
+										<h2></h2>
 									</a>
 									<a href="#">
 										<h3>branding</h3>
@@ -261,15 +297,15 @@
 				</ul>
 			</div>
 		</div>
-	</section><!--  end portfolio  -->
+	</section>  end portfolio  -->
 
 	<!--  start testimonials  -->
-	<section class="Asspirations" id="Asspirations">
+	<section class="Asspirations" id="section4">
 		<div class="wrapper clearfix">
-			<h2 class="title">Asspirations<span>/  something to do here</span></h2>
+			<h2 class="title">Aspirations<span>/  something to do here</span></h2>
 			<div class="Asspirations_wrapper">
 				<article>
-					<img src="img/quote.png" alt="" title="" class="quote">
+					<img src="" alt="" title="" class="quote">
 					<h4 class="author">lol</h4>
 					<div class="Asspirations">
 						<span class="arrow"></span>
@@ -279,7 +315,6 @@
 				</article>
 
 				<article>
-					<img src="iassets/images/quote.png" alt="" title="" class="quote">
 					<h4 class="author">i Dont Know</h4>
 					<div class="Asspirations">
 						<span class="arrow"></span>
@@ -288,7 +323,7 @@
 				</article>
 
 				<article>
-					<img src="img/quote.png" alt="" title="" class="quote">
+					<img src="" alt="" title="" class="quote">
 					<h4 class="author">What im doin</h4>
 					<div class="Asspirations">
 						<span class="arrow"></span>
@@ -300,8 +335,8 @@
 	</section><!--  ennd Asspirations  -->
 
 	<!--  start contact  -->
-	<section class="Contact" id="Contact">
-		<img src="img/contact_icon.png" alt="" title=""/>
+	<section class="Contact" id="section5">
+		<img src="" alt="" title=""/>
 		<h2 class="title">something</h2>
 		<hr/>
 		<p class="email">to do here</p>
