--- a/index.html
+++ b/index.html
@@ -131,46 +131,10 @@
 		</div><!--  end wrapper  -->
 	</section><!--  end Profile  -->
 
-			<div class="section active" id="section1">
-					<div class="slide">
-						<div class="intro">
-							<h1>Create Sliders</h1>
-							<p>Not only vertical scrolling but also horizontal scrolling. With fullPage.js you will be able to add horizontal sliders in the most simple way ever.</p>
-							<img src="assets/images/1.jpg" alt="slider" />
-						</div>
+		
 
-					</div>
-					<div class="slide">
-						<div class="intro">
-							<img src="assets/images/2.jpg" alt="simple" />
-							<h1>Simple</h1>
-							<p>Easy to use. Configurable and customizable.</p>
-						</div>
-					</div>
-					<div class="slide">
-						<div class="intro">
-							<img src="assets/images/3.jpg" alt="Cool" />
-							<h1>Cool</h1>
-							<p>It just looks cool. Impress everybody with a simple and modern web design!</p>
-						</div>
-					</div>
-					<div class="slide">
-						<div class="intro">
-							<img src="assets/images/4.jpg" alt="Compatible" />
-							<h1>Compatible</h1>
-							<p>Working in modern and old browsers too! IE 8 users don't have the fault of using that horrible browser! Lets give them a chance to see your site in a proper way!</p>
-						</div>
-					</div>
-				</div>
-
-
-
-
-
-
-
-	<!--  start Gallery  --
-	<section class="portfolio clearfix" id="portfolio">
+	<!--  start Gallery  -->
+	<section class="portfolio clearfix" id="section1">
 		<div class="wrapper clearfix">
 			<h2 class="title">Portfolio<span>/  some pictures of me</span></h2>
 			<div class="folio_wrapper">
@@ -240,7 +204,7 @@
 							<div class="shadow">
 								<div class="folio_info">
 									<a href="#">
-										<h2>/h2>
+										<h2></h2>
 									</a>
 									<a href="#">
 										<h3>branding</h3>
@@ -297,7 +261,7 @@
 				</ul>
 			</div>
 		</div>
-	</section>  end portfolio  -->
+	</section>  <!--end portfolio  -->
 
 	<!--  start testimonials  -->
 	<section class="Asspirations" id="section4">
