--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-	<script type="text/javascript" src="assets/js/main.js"></script>
+	<!--<script type="text/javascript" src="assets/js/main.js"></script>-->
 	<script type="text/javascript" src="assets/js/jquery.js"></script>
 	<script type="text/javascript" src="assets/js/easing.js"></script>
     <script type="text/javascript" src="assets/js/flexslider.js"></script>
