nag add kog css para sa portfolio

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 	<script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.fullPage.js"></script>
 	<script type="text/javascript" src="assets/js/examples.js"></script>
+	<!--script for gallery-->
+	<link rel="shortcut icon" href="assets/css/gallery/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="assets/css/gallery/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/gallery/component.css" />
+	<script src="assets/js/gallery/modernizr.min.js"></script>
+
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
@@ -35,7 +41,7 @@
 									<ul id="menu">
 										<li data-menuanchor="Introduction"><a href="#section3">Introduction</a></li>
 										<li data-menuanchor="Profile"><a href="#section2">Profile</a></li>
-										<li data-menuanchor="portfolio"><a href="#section1">Portfolio</a></li>
+										<li data-menuanchor="portfolio"><a href="#photostack-1">Portfolio</a></li>
 										<li data-menuanchor="Asspirations"><a href="#section4">Aspirations</a></li>
 										<li data-menuanchor="Contact"><a href="#section5">Contact</a></li>
 
@@ -134,134 +140,58 @@
 		
 
 	<!--  start Gallery  -->
-	<section class="portfolio clearfix" id="section1">
-		<div class="wrapper clearfix">
-			<h2 class="title">Portfolio<span>/  some pictures of me</span></h2>
-			<div class="folio_wrapper">
-				<ul class='slides clearfix'>
-					<li>
-						<article>
-							<div class="shadow">
-								<div class="folio_info">
-									<a href="#">
-										<h2></h2>
-									</a>
-									<a href="#">
-										<h3>branding</h3>
-									</a>
-								</div>						
-							</div>
-							<a href="#">
-								<div class="folio_img">
-									<img src="assets/images/1.jpg" alt="" title="">
-								</div>
-							</a>
-						</article>
-					</li>
 
-					<li>
-						<article>
-							<div class="shadow">
-								<div class="folio_info">
-									<a href="#">
-										<h2></h2>
-									</a>
-									<a href="#">
-										<h3>branding</h3>
-									</a>
-								</div>						
-							</div>
-							<a href="#">
-								<div class="folio_img">
-									<img src="assets/images/1.jpg" alt="" title="">
-								</div>
-							</a>
-						</article>
-					</li>
+			<section id="photostack-1" class="photostack photostack-start">
+				<div id="gallery">
+					<figure>
+						<a href="" class="photostack-img"><img src="assets/images/1.jpg" alt="img01"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure>
+						<a href="" class="photostack-img"><img src="assets/images/2.jpg" alt="img02"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure>
+						<a href="" class="photostack-img"><img src="assets/images/3.jpg" alt="img03"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure>
+						<a href="" class="photostack-img"><img src="assets/images/4.jpg" alt="img04"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure>
+						<a href="" class="photostack-img"><img src="assets/images/5.jpg" alt="img05"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure>
+						<a href="" class="photostack-img"><img src="assets/images/6.jpg" alt="img06"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure data-dummy>
+						<a href="#" class="photostack-img"><img src="assets/images/7.jpg" alt="img07"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+				</div>
+			</section>
 
-					<li>
-						<article>
-							<div class="shadow">
-								<div class="folio_info">
-									<a href="#">
-										<h2></h2>
-									</a>
-									<a href="#">
-										<h3>branding</h3>
-									</a>
-								</div>						
-							</div>
-							<a href="#">
-								<div class="folio_img">
-									<img src="assets/images/2.jpg" alt="" title="">
-								</div>
-							</a>
-						</article>
-					</li>
 
-					<li>
-						<article>
-							<div class="shadow">
-								<div class="folio_info">
-									<a href="#">
-										<h2></h2>
-									</a>
-									<a href="#">
-										<h3>branding</h3>
-									</a>
-								</div>						
-							</div>
-							<a href="#">
-								<div class="folio_img">
-									<img src="assets/images/3.jpg" alt="" title="">
-								</div>
-							</a>
-						</article>
-					</li>
 
-					<li>
-						<article>
-							<div class="shadow">
-								<div class="folio_info">
-									<a href="#">
-										<h2></h2>
-									</a>
-									<a href="#">
-										<h3>branding</h3>
-									</a>
-								</div>						
-							</div>
-							<a href="#">
-								<div class="folio_img">
-									<img src="assets/images/4.jpg" alt="" title="">
-								</div>
-							</a>
-						</article>
-					</li>
-
-					<li>
-						<article>
-							<div class="shadow">
-								<div class="folio_info">
-									<a href="#">
-										<h2></h2>
-									</a>
-									<a href="#">
-										<h3>branding</h3>
-									</a>
-								</div>						
-							</div>
-							<a href="#">
-								<div class="folio_img">
-									<img src="assets/images/5.jpg" alt="" title="">
-								</div>
-							</a>
-						</article>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</section>  <!--end portfolio  -->
+	<!--  end Gallery  -->
+	
 
 	<!--  start testimonials  -->
 	<section class="Asspirations" id="section4">
@@ -311,6 +241,27 @@
 
 		</div><!--  end wrapper  -->
 	</section><!--  end about  -->
+		<script src="assets/js/gallery/classie.js"></script>
+		<script src="assets/js/gallery/photostack.js"></script>
+		<script>
+			// [].slice.call( document.querySelectorAll( '.photostack' ) ).forEach( function( el ) { new Photostack( el ); } );
+			
+			new Photostack( document.getElementById( 'photostack-1' ), {
+				callback : function( item ) {
+					//console.log(item)
+				}
+			} );
+			new Photostack( document.getElementById( 'photostack-2' ), {
+				callback : function( item ) {
+					//console.log(item)
+				}
+			} );
+			new Photostack( document.getElementById( 'photostack-3' ), {
+				callback : function( item ) {
+					//console.log(item)
+				}
+			} );
+		</script>
 
 </body>
 </html>
