--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="wrapper clearfix">
 			<article>
 				<div class="Introduction_info">
-					<h3 class="Introduction_title">Some thing here</h3>
+					<h1 class="Introduction_title">Some thing here</h1>
 					<p class="Introduction_desc">bla bla bla</p>
 				</div>
 			</article>
@@ -80,7 +80,7 @@
 	<section class="Profile" id="section2">
 		<div class="wrapper clearfix">
 			<img src="assets/images/name1.jpg">
-			<p class="Profile_txt">Blah2</p>
+			<p class="Profile_txt">#N.G.S.B 	#Introvert		#TaongBahay</p>
 
 			<div class="timeline">
 				<hr class="hseparator"/>	
@@ -196,35 +196,50 @@
 	<!--  start testimonials  -->
 	<section class="Asspirations" id="section4">
 		<div class="wrapper clearfix">
-			<h2 class="title">Aspirations<span>/  something to do here</span></h2>
-			<div class="Asspirations_wrapper">
-				<article>
-					<img src="" alt="" title="" class="quote">
-					<h4 class="author">lol</h4>
-					<div class="Asspirations">
-						<span class="arrow"></span>
-						<p>
-						</p>
-					</div>
-				</article>
+			<h1 class="title">Aspirations and Skills<span>/ a life full of 1's and 0's</h1>
 
-				<article>
-					<h4 class="author">i Dont Know</h4>
-					<div class="Asspirations">
-						<span class="arrow"></span>
-						<p></p>
-					</div>
-				</article>
 
-				<article>
-					<img src="" alt="" title="" class="quote">
-					<h4 class="author">What im doin</h4>
-					<div class="Asspirations">
-						<span class="arrow"></span>
-						<p></p>
-					</div>
-				</article>
-			</div>	
+			<div class="skillbar clearfix " data-percent="50%">
+				<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
+					<div class="skillbar-bar" style="background: #e67e22;"></div>
+					<div class="skill-bar-percent">50%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="25%">
+					<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
+					<div class="skillbar-bar" style="background: #3498db;"></div>
+					<div class="skill-bar-percent">25%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="50%">
+					<div class="skillbar-title" style="background: #2c3e50;"><span>jQuery</span></div>
+					<div class="skillbar-bar" style="background: #2c3e50;"></div>
+					<div class="skill-bar-percent">50%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="30%">
+					<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
+					<div class="skillbar-bar" style="background: #5a68a5;"></div>
+					<div class="skill-bar-percent">30%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="75%">
+					<div class="skillbar-title" style="background: #333333;"><span>Wordpress</span></div>
+					<div class="skillbar-bar" style="background: #525252;"></div>
+					<div class="skill-bar-percent">75%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="60%">
+					<div class="skillbar-title" style="background: #124e8c;"><span>Photoshop</span></div>
+					<div class="skillbar-bar" style="background: #4288d0;"></div>
+					<div class="skill-bar-percent">60%</div>
+				</div> <!-- End Skill Bar -->
+				<div class="skillbar clearfix " data-percent="40%">
+					<div class="skillbar-title" style="background: #27ae60;"><span>Java</span></div>
+					<div class="skillbar-bar" style="background: #2ecc71;"></div>
+					<div class="skill-bar-percent">40%</div>
+				</div> <!-- End Skill Bar -->
+		
 		</div>
 	</section><!--  ennd Asspirations  -->
 
@@ -261,6 +276,15 @@
 					//console.log(item)
 				}
 			} );
+		</script>
+		<script>
+			jQuery(document).ready(function(){
+			jQuery('.skillbar').each(function(){
+				jQuery(this).find('.skillbar-bar').animate({
+					width:jQuery(this).attr('data-percent')
+				},6000);
+			});
+		});
 		</script>
 
 </body>
