converter my image files

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 										<li data-menuanchor="Contact"><a href="#section5">Contact</a></li>
 
 									</ul>
+									<a href="section0"><img src="assets/images/name1.jpg" alt="" title="" id="header_logo"/></a>>
 							</nav>
 					</div>
 		</header>
@@ -79,7 +80,7 @@
 <!--  start Profile  -->
 	<section class="Profile" id="section2">
 		<div class="wrapper clearfix">
-			<img src="assets/images/name1.jpg">
+			<a href="#"><img src="assets/images/name1.jpg"></a>
 			<p class="Profile_txt">#N.G.S.B 	#Introvert		#TaongBahay</p>
 
 			<div class="timeline">
@@ -179,8 +180,32 @@
 							<h1 class="photostack-title">Caption This</h1>
 						</figcaption>
 					</figure>
-					<figure data-dummy>
+					<figure >
 						<a href="#" class="photostack-img"><img src="assets/images/7.jpg" alt="img07"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure data-dummy>
+						<a href="#" class="photostack-img"><img src="assets/images/8.jpg" alt="img07"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure data-dummy>
+						<a href="#" class="photostack-img"><img src="assets/images/9.jpg" alt="img07"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure >
+						<a href="#" class="photostack-img"><img src="assets/images/10.jpg" alt="img07"/></a>
+						<figcaption>
+							<h1 class="photostack-title">Caption This</h1>
+						</figcaption>
+					</figure>
+					<figure data-dummy >
+						<a href="#" class="photostack-img"><img src="assets/images/11.jpg" alt="img07"/></a>
 						<figcaption>
 							<h1 class="photostack-title">Caption This</h1>
 						</figcaption>
