--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		
 
 		<div class="caption">
-			<h2>This is me</h2>
+			<h2>Pain is Inevitable to Suffer is a Choice</h2>
 		</div>
 
 	</section><!--  end billboard  -->
@@ -68,8 +68,8 @@
 		<div class="wrapper clearfix">
 			<article>
 				<div class="Introduction_info">
-					<h1 class="Introduction_title">Some thing here</h1>
-					<p class="Introduction_desc">bla bla bla</p>
+					<h1 class="Introduction_title">Hi !</h1>
+					<p class="Introduction_desc">I am Jayson Pegte-Jarquio a Third year student of Batchelor of Science Major In Computer Science. I love to read novel books my favorite author is Dan Brown. I also love to cook. I am a typical loner by nature who loves to be alone. </p>
 				</div>
 			</article>
 		</div>
