removed ang mga dli kailangan

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 	<!--  start contact  -->
 	<section class="Contact" id="section5">
 		<img src="" alt="" title=""/>
-		<h2 class="title">something</h2>
+		<h1 class="title">Contacts</h1>
 		<hr/>
 		<p class="email">to do here</p>
 		<p class="phone">312312312312312312</p>
