last touch contacts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Jayson</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -269,9 +271,14 @@
 	<section class="Contact" id="section5">
 		<img src="" alt="" title=""/>
 		<h1 class="title">Contacts</h1>
-		<hr/>
-		<p class="email">to do here</p>
-		<p class="phone">312312312312312312</p>
+		<hr>		</hr>
+		<div id="links">
+
+		<a href="https://web.facebook.com/jayson.jarquio?ref=bookmarks"><i class="fa fa-facebook-official"></i></a>
+		
+		</div>
+
+		
 	</section><!--  end contact  -->
 
 
