alignment of contacs

--- a/index.html
+++ b/index.html
@@ -273,9 +273,10 @@
 		<h1 class="title">Contacts</h1>
 		<hr>		</hr>
 		<div id="links">
-
-		<a href="https://web.facebook.com/jayson.jarquio?ref=bookmarks"><i class="fa fa-facebook-official"></i></a>
-		
+		<p>
+		<h1><a href="https://web.facebook.com/jayson.jarquio?ref=bookmarks"><i class="fa fa-facebook-official"></i></a></h1>
+		<h1><a href="https://twitter.com/JarquioJayson"><i class="fa fa-twitter-square"></i></a></h1>
+		</p>
 		</div>
 
 		
