some more adjustments

--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
 		<h1><a href="https://web.facebook.com/jayson.jarquio?ref=bookmarks"><i class="fa fa-facebook-official"></i></a></h1>
 		<h1><a href="https://twitter.com/JarquioJayson"><i class="fa fa-twitter-square"></i></a></h1>
 		<h1><a href="mailto:jaysonjarquio@yahoo.com"><i class="fa fa-envelope"></i></a></h1>
+		<h1><a href="https://www.instagram.com/bx_noob/?hl=en"><i class="fa fa-instagram"></i></a></h1>
 		</p>
 		</div>
 
