--- a/index.html
+++ b/index.html
@@ -146,67 +146,67 @@
 					<figure>
 						<a href="" class="photostack-img"><img src="assets/images/1.jpg" alt="img01"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title">Looking for Somebody</h1>
 						</figcaption>
 					</figure>
 					<figure>
 						<a href="" class="photostack-img"><img src="assets/images/2.jpg" alt="img02"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title">Asa na u?</h1>
 						</figcaption>
 					</figure>
 					<figure>
 						<a href="" class="photostack-img"><img src="assets/images/3.jpg" alt="img03"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title">Here na me. :(</h1>
 						</figcaption>
 					</figure>
 					<figure>
 						<a href="" class="photostack-img"><img src="assets/images/4.jpg" alt="img04"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title">Tagal pa ba u? :(</h1>
 						</figcaption>
 					</figure>
 					<figure>
 						<a href="" class="photostack-img"><img src="assets/images/5.jpg" alt="img05"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title">Antay lang me here. :) </h1>
 						</figcaption>
 					</figure>
 					<figure>
 						<a href="" class="photostack-img"><img src="assets/images/6.jpg" alt="img06"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title">Hope mag dating na u :) </h1>
 						</figcaption>
 					</figure>
 					<figure >
 						<a href="#" class="photostack-img"><img src="assets/images/7.jpg" alt="img07"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title">Worth a wait naman :)</h1>
 						</figcaption>
 					</figure>
 					<figure data-dummy>
 						<a href="#" class="photostack-img"><img src="assets/images/8.jpg" alt="img07"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title"></h1>
 						</figcaption>
 					</figure>
 					<figure data-dummy>
 						<a href="#" class="photostack-img"><img src="assets/images/9.jpg" alt="img07"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title"></h1>
 						</figcaption>
 					</figure>
 					<figure >
 						<a href="#" class="photostack-img"><img src="assets/images/10.jpg" alt="img07"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title"></h1>
 						</figcaption>
 					</figure>
 					<figure data-dummy >
 						<a href="#" class="photostack-img"><img src="assets/images/11.jpg" alt="img07"/></a>
 						<figcaption>
-							<h1 class="photostack-title">Caption This</h1>
+							<h1 class="photostack-title"></h1>
 						</figcaption>
 					</figure>
 				</div>
